force-app/main/default/objects/Case/fields/NYPD_DA_Documents__c.field-meta.xml
<CustomField>
    <fullName>NYPD_DA_Documents__c</fullName>
    <label>NYPD/DA Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NYPD Complaint Report</fullName>
            </value>
            <value>
                <fullName>NYPD Arrest Report</fullName>
            </value>
            <value>
                <fullName>Criminal Complaint</fullName>
            </value>
            <value>
                <fullName>Warrant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>