force-app/main/default/objects/Case/fields/Other_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Closed_Reason__c</fullName>
    <label>Other Closed Reason</label>
    <type>TextArea</type>
</CustomField>