force-app/main/default/objects/Case/fields/Other_Violence__c.field-meta.xml
<CustomField>
    <fullName>Other_Violence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Violence</label>
    <type>Checkbox</type>
</CustomField>