force-app/main/default/objects/Case/fields/Precinct__c.field-meta.xml
<CustomField>
    <fullName>Precinct__c</fullName>
    <formula>VALUE(MID( NYPD_Complaint_Number__c , 6, 3))</formula>
    <label>Precinct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>