force-app/main/default/objects/Case/fields/Referral_From_Training_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Referral_From_Training_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral From Training/Outreach</label>
    <type>Checkbox</type>
</CustomField>