force-app/main/default/objects/Case/fields/Relationship_of_Defendant_to_Victim__c.field-meta.xml
<CustomField>
    <fullName>Relationship_of_Defendant_to_Victim__c</fullName>
    <label>Relationship of Defendant to Victim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boyfriend (opposite-sex)</fullName>
            </value>
            <value>
                <fullName>Boyfriend (same-sex)</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Ex-boyfriend (opposite-sex)</fullName>
            </value>
            <value>
                <fullName>Ex-boyfriend (same-sex)</fullName>
            </value>
            <value>
                <fullName>Ex-husband (opposite-sex)</fullName>
            </value>
            <value>
                <fullName>Ex-husband (same-sex)</fullName>
            </value>
            <value>
                <fullName>Ex-wife (opposite-sex)</fullName>
            </value>
            <value>
                <fullName>Ex-wife (same-sex)</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Fiancé</fullName>
            </value>
            <value>
                <fullName>Former boyfriend (opposite-sex)</fullName>
            </value>
            <value>
                <fullName>Former boyfriend (same-sex)</fullName>
            </value>
            <value>
                <fullName>Former girlfriend (opposite-sex)</fullName>
            </value>
            <value>
                <fullName>Former girlfriend (same-sex)</fullName>
            </value>
            <value>
                <fullName>Girlfriend (opposite-sex)</fullName>
            </value>
            <value>
                <fullName>Girlfriend (same-sex)</fullName>
            </value>
            <value>
                <fullName>Husband (opposite-sex)</fullName>
            </value>
            <value>
                <fullName>Husband (same-sex)</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Other family member</fullName>
            </value>
            <value>
                <fullName>Roommate</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Wife (opposite-sex)</fullName>
            </value>
            <value>
                <fullName>Wife (same-sex)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>