force-app/main/default/objects/Case/fields/Scene_Location_County__c.field-meta.xml
<CustomField>
    <fullName>Scene_Location_County__c</fullName>
    <label>Scene Location County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>