force-app/main/default/objects/Case/fields/Scene_Location_State__c.field-meta.xml
<CustomField>
    <fullName>Scene_Location_State__c</fullName>
    <label>Scene Location State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>