force-app/main/default/objects/Case/fields/Search_Warrant_Type__c.field-meta.xml
<CustomField>
    <fullName>Search_Warrant_Type__c</fullName>
    <label>Search Warrant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premise</fullName>
            </value>
            <value>
                <fullName>Animal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>