force-app/main/default/objects/Case/fields/Secondary_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Case_Type__c</fullName>
    <label>Secondary Case Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neglect</fullName>
            </value>
            <value>
                <fullName>Non-Accidental Injury</fullName>
            </value>
            <value>
                <fullName>Animal Fighting</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Abandonment</fullName>
            </value>
            <value>
                <fullName>Disaster</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>