force-app/main/default/objects/Case/fields/Snapshot_FWD__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_FWD__c</fullName>
    <label>Snapshot FWD</label>
    <type>Date</type>
</CustomField>