force-app/main/default/objects/Case/fields/Temporary_Worker_Fees__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Worker_Fees__c</fullName>
    <label>Temporary Worker Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>