force-app/main/default/objects/Case/fields/Total_Animals__c.field-meta.xml
<CustomField>
    <fullName>Total_Animals__c</fullName>
    <formula>Total_Animals_Reported__c +  Total_Animals_Rescued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Animals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>