force-app/main/default/objects/Case/fields/Total_Animals_Reported__c.field-meta.xml
<CustomField>
    <fullName>Total_Animals_Reported__c</fullName>
    <label>Total Animals Reported</label>
    <summarizedField>Estimated_Animals_Reported__c.Reported_Quantity__c</summarizedField>
    <summaryForeignKey>Estimated_Animals_Reported__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>