force-app/main/default/objects/Case/fields/Total_Animals_Rescued__c.field-meta.xml
<CustomField>
    <fullName>Total_Animals_Rescued__c</fullName>
    <formula>Total_Avians_Rescued__c +  Total_Cats_Logged__c +  Total_Cows_Rescued__c +  Total_Dogs_Logged__c +  Total_Equine_Logged__c +  Total_Exotic_Logged__c +  Total_Fowl_Logged__c +  Total_Goats_Rescued__c +  Total_Other_Animals_Logged__c +  Total_Pigs_Rescued__c +  Total_Rabbits_Rescued__c +  Total_Reptiles_Rescued__c +  Total_Sheep_Rescued__c +  Total_Wildlife_Rescued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Animals Rescued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>