force-app/main/default/objects/Case/fields/Total_Avians__c.field-meta.xml
<CustomField>
    <fullName>Total_Avians__c</fullName>
    <formula>Total_Avians_Reported__c  +  Total_Avians_Rescued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Avians</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>