force-app/main/default/objects/Case/fields/Total_Cats__c.field-meta.xml
<CustomField>
    <fullName>Total_Cats__c</fullName>
    <formula>Total_Cats_Reported__c +  Total_Cats_Logged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>