force-app/main/default/objects/Case/fields/Total_Cows__c.field-meta.xml
<CustomField>
    <fullName>Total_Cows__c</fullName>
    <formula>Total_Cows_Reported__c +  Total_Cows_Rescued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>