force-app/main/default/objects/Case/fields/Total_Dogs__c.field-meta.xml
<CustomField>
    <fullName>Total_Dogs__c</fullName>
    <formula>Total_Dogs_Reported__c +  Total_Dogs_Logged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Dogs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>