force-app/main/default/objects/Case/fields/Total_Equine__c.field-meta.xml
<CustomField>
    <fullName>Total_Equine__c</fullName>
    <formula>Total_Equine_Reported__c +  Total_Equine_Logged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Equine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>