force-app/main/default/objects/Case/fields/Total_Exotics__c.field-meta.xml
<CustomField>
    <fullName>Total_Exotics__c</fullName>
    <formula>Total_Exotic_Logged__c +  Total_Exotics_Reported__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Exotics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>