force-app/main/default/objects/Case/fields/Total_Exotics_Reported__c.field-meta.xml
<CustomField>
    <fullName>Total_Exotics_Reported__c</fullName>
    <label>Total Exotics Reported</label>
    <summarizedField>Estimated_Animals_Reported__c.Reported_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Estimated_Animals_Reported__c.Species__c</field>
        <operation>equals</operation>
        <value>Exotics</value>
    </summaryFilterItems>
    <summaryForeignKey>Estimated_Animals_Reported__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>