force-app/main/default/objects/Case/fields/Total_Fowl__c.field-meta.xml
<CustomField>
    <fullName>Total_Fowl__c</fullName>
    <formula>Total_Fowl_Reported__c +  Total_Fowl_Logged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fowl</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>