force-app/main/default/objects/Case/fields/Total_Goats__c.field-meta.xml
<CustomField>
    <fullName>Total_Goats__c</fullName>
    <formula>Total_Goats_Reported__c +  Total_Goats_Rescued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Goats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>