force-app/main/default/objects/Case/fields/Total_Number_of_Deployment_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Deployment_Days__c</fullName>
    <formula>Deployment_End_Date__c - Deployment_Start_Date__c</formula>
    <label>Total Number of Deployment Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>