force-app/main/default/objects/Case/fields/Total_Number_of_Responder_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Responder_Hours__c</fullName>
    <label>Total Number of Responder Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>