force-app/main/default/objects/Case/fields/Total_Other_Animals__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Animals__c</fullName>
    <formula>Total_Other_Animals_Reported__c +  Total_Other_Animals_Logged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Other Animals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>