force-app/main/default/objects/Case/fields/Total_Pigs__c.field-meta.xml
<CustomField>
    <fullName>Total_Pigs__c</fullName>
    <formula>Total_Pigs_Reported__c +  Total_Pigs_Rescued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pigs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>