force-app/main/default/objects/Case/fields/Total_Rabbits__c.field-meta.xml
<CustomField>
    <fullName>Total_Rabbits__c</fullName>
    <formula>Total_Rabbits_Reported__c +  Total_Rabbits_Rescued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rabbits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>