force-app/main/default/objects/Case/fields/Total_Reptiles__c.field-meta.xml
<CustomField>
    <fullName>Total_Reptiles__c</fullName>
    <formula>Total_Reptiles_Reported__c +  Total_Reptiles_Rescued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Reptiles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>