force-app/main/default/objects/Case/fields/Total_Reptiles_Rescued__c.field-meta.xml
<CustomField>
    <fullName>Total_Reptiles_Rescued__c</fullName>
    <label>Total Reptiles Rescued</label>
    <summaryFilterItems>
        <field>Animal__c.Type_of_Animal__c</field>
        <operation>equals</operation>
        <value>Reptile</value>
    </summaryFilterItems>
    <summaryForeignKey>Animal__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>