force-app/main/default/objects/Case/fields/Total_Sheep__c.field-meta.xml
<CustomField>
    <fullName>Total_Sheep__c</fullName>
    <formula>Total_Sheep_Reported__c +  Total_Sheep_Rescued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sheep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>