force-app/main/default/objects/Case/fields/Total_Wildlife__c.field-meta.xml
<CustomField>
    <fullName>Total_Wildlife__c</fullName>
    <formula>Total_Wildlife_Reported__c +  Total_Wildlife_Rescued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Wildlife</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>