force-app/main/default/objects/Case/fields/Treated_At__c.field-meta.xml
<CustomField>
    <fullName>Treated_At__c</fullName>
    <label>Treated At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAH</fullName>
            </value>
            <value>
                <fullName>ACC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>