force-app/main/default/objects/Case/fields/Vetrinary_Fees__c.field-meta.xml
<CustomField>
    <fullName>Vetrinary_Fees__c</fullName>
    <label>Veterinary Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>