force-app/main/default/objects/Case/recordTypes/Action_Item.recordType-meta.xml
<RecordType>
    <fullName>Action_Item</fullName>
    <active>false</active>
    <businessProcess>ASPCA AI</businessProcess>
    <label>Action Item</label>
</RecordType>