force-app/main/default/objects/Case/recordTypes/FIR_Case.recordType-meta.xml
<RecordType>
    <fullName>FIR_Case</fullName>
    <active>true</active>
    <businessProcess>National Criminal</businessProcess>
    <label>National Criminal Case</label>
</RecordType>