force-app/main/default/objects/Case/recordTypes/Natural_Disaster_Case.recordType-meta.xml
<RecordType>
    <fullName>Natural_Disaster_Case</fullName>
    <active>true</active>
    <businessProcess>Natural Disaster</businessProcess>
    <label>Natural Disaster Case</label>
</RecordType>