force-app/main/default/objects/Case/recordTypes/NYC_Criminal_Case.recordType-meta.xml
<RecordType>
    <fullName>NYC_Criminal_Case</fullName>
    <active>true</active>
    <businessProcess>NYC Criminal</businessProcess>
    <label>NYC Criminal Case</label>
</RecordType>