force-app/main/default/objects/Case/listViews/All_Cases2.listView-meta.xml
<ListView>
    <fullName>All_Cases2</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Case_Subtype__c</columns>
    <columns>Investigator__c</columns>
    <columns>Lead_Attorney__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases</label>
    <sharedTo>
        <group>Legal_Advocacy</group>
    </sharedTo>
</ListView>